[package]
name = "exosphere-core"
version = "0.0.1"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
repository = "https://github.com/KennethWilke/exosphere-core"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.0"
rmpv = { version = "1.0.0", features = ["with-serde"] }
